data/derived/comb/progs/unify/prog4519.ml.out
Characters 140-141:
  | h::t  -> ( (fst h + snd h) / 10, (fst h + snd h) mod 10 :: t )in 
                                                               ^
Error: This expression has type (int * int) list
       but an expression was expected of type int list
       Type int * int is not compatible with type int 
